Fixed threading issues in autoscaler.